syntax = "proto3";

service HelloService {
    rpc LotsOfReplies (HelloRequest) returns (stream HelloResponse) {
    }
}

message HelloRequest {
    string greeting = 1;
}

message HelloResponse {
    string reply = 1;
}
